tried to fix bg-image not fittinf with auto

--- a/style.css
+++ b/style.css
@@ -18,18 +18,18 @@ body,
 }
 
 .container {
-    padding: 5em;
+    padding: 0 6em 0 6em;
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 80vh;
+    height: 90vh;
 }
 .main__panel {
     margin: 0.5em;
     height: 100%;
-    border-radius: 3rem;
+    border-radius: 5rem;
     position: relative;
-    transition: 0.7s ease-in;
+    transition: 0.7s ease-in-out;
     background-size: auto 100%;
     background-position: center;
     background-repeat: no-repeat;
@@ -57,7 +57,7 @@ body,
     position: absolute;
     color: white;
     bottom: 0rem;
-    left: 0.7rem;
+    left: 2rem;
     opacity: 0;
 }
 
